# frozendict

./: .buildinfo  .coveragerc  .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CHANGELOG.rst  CODEOWNERS  MANIFEST.in  README.md  README.rst  TODO.rst  bitbucket-pipelines.yml  changelog.html  config.py  genindex.html  index.html  makefile  objects.inv  py-modindex.html  readme.html  requirements.dev.txt  requirements.docs.txt  requirements.test  requirements.test.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.doctrees/: changelog.doctree  environment.pickle  index.doctree  readme.doctree
.doctrees/api/: frozen_dict.doctree  index.doctree  no_copy_frozen_dict.doctree
.github/: dependabot.yml
.github/workflows/: automerge-dependabot.yml  docs.yml  precommit-update.yml  tag.yml  test.yml
_static/: documentation_options.js
api/: frozen_dict.html  index.html  no_copy_frozen_dict.html
docs/: changelog.rst  conf.py  index.rst
docs/api/: abstract_dict.rst  frozen_dict.rst  index.rst  no_copy_frozen_dict.rst
frozendict/: AbstractDict.py  FrozenDict.py  __init__.py  frozen_dict.py  no_copy_frozen_dict.py
src/frozendict/: __init__.py  frozen_dict.py
tests/: test_0.py  test_abstract_dict.py  test_frozen_dict.py  test_frozen_dict_initialization.py  test_frozen_dict_methods.py  test_no_copy_frozen_dict.py  test_performance_a.py  test_pickling.py
