[metadata]
name = frozendict
version = 2022.1.4
description = A modern implementation of FrozenDict.
author = Omina Technologies
author_email = info@ominatechnologies.com
description_file = file: README.rst
long_description = file: README.rst
long_description_content_type = text/reStructuredText
license = MIT
license_file = LICENSE
url = https://github.com/ominatechnologies/frozendict
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords =
    immutable
    python
    type system

[options]
zip_safe = false
packages = frozendict
python_requires = >= 3.8.0
setup_requires =
    setuptools >= 46.4.0
    wheel >= 0.36.0
include_package_data = true

[options.package_data]
frozendict =
    py.typed

[options.data_files]
frozendict =
    AUTHORS.rst
    CHANGELOG.rst
    LICENSE
    README.rst

[bdist_wheel]
universal = true

[flake8]
exclude =
    .git
    .eggs
    .*_cache
    *.egg-info
    venv
    build
    dist
    docs
inline-quotes = double
ignore = SIM106, W503

[mypy]
allow_untyped_globals = False
color_output = True
error_summary = True
pretty = True
python_version = 3.8
show_absolute_path = True
show_column_numbers = True
show_error_codes = True
show_error_context = True
show_none_errors = True
show_traceback = True
verbosity = 0
warn_no_return = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-pkg_resources.*]
ignore_missing_imports = True

[tool:pytest]
addopts =
    -ra -s
    --color=yes
    --doctest-modules
    --failed-first
    --maxfail=1
    --new-first
    --verbosity=1
;    --showlocals
junit_family = xunit1
norecursedirs =
    .mypy_cache
    .tox
    *.egg
    *.venv
    docs
python_files = test_*.py
testpaths =
    ./frozendict
    ./tests

[pytest-watch]
addopts =
    -ra -s
    --color=yes
    --doctest-modules
    --failed-first
    --maxfail=1
    --new-first
    --verbosity=1
;    --showlocals
; The extensions should be listed on one line!
ext = .csv,.jinja2,.json,.py,.yaml,.yml
watchpaths =
    ./frozendict
    ./tests

[bumpver]
current_version = 2022.1.4
version_pattern = YYYY.MM.DD[.INC0]
commit_message = chore: Release {new_version}
commit = True
tag = False
push = False

[bumpver:file_patterns]
setup.cfg =
    current_version = {version}
    version = {version}
config.py =
    release = "{version}"
